fixed the issue with the app menu covering the page content in the lectures page and not pushing the content downwards

--- a/app/styles/student/courseware.css
+++ b/app/styles/student/courseware.css
@@ -352,14 +352,17 @@ input[type="checkbox"], input[type="radio"] {
 
 .middle-container{
   /*background-color: aliceblue;*/
-  position: fixed;
-  bottom: 40px;
-  top: 100px;
-  right: 20px;
-  left: 20px;
-  padding-top: 0px; 
-  overflow-y: auto; 
+  /*position: fixed;*/
+  /*bottom: 40px;*/
+  /*top: 100px;*/
+  /*right: 20px;*/
+  /*left: 20px;*/
+  padding-top: 0px;
+  overflow-y: auto;
   text-align: left;
+  margin-top: 40px;
+  position: relative;
+  z-index: 1;
 }
 .currentitem{
       /*border: 2px solid lightslategray;*/
